--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "merge": "^1.2.1",
     "node-sass": "^4.11.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-iframe": "^1.5.0",
     "react-scripts": "2.0.4",
-    "semantic-ui-react": "^0.85.0"
+    "semantic-ui-react": "^0.85.0",
+    "webpack-dev-server": "^3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
